tests/NormalTests/paczka1/fuzzy1/34490031.err
Error in line 3: zYxSYv S23 27,6
Error in line 6: zYxSYv A528 55,1
Error in line 37: LUz0V S23 50,4
Error in line 26: mJGegj8RcG S23 0,0
